# ChessArthurBrain

./: .gitignore  CMakeLists.txt  GenerateMaskAttacks.sh  LICENSE  README.md
MaskAttacks/: main  main.cpp
engine/: CMakeLists.txt  main.cpp
engine/inc/: BitboardHelper.hpp  Board.hpp  BoardHelper.hpp  DebugEngineCLI.hpp  Game.hpp  MaskBeshopAttacks.hpp  MaskBlackPawnAttacks.hpp  MaskKingAttacks.hpp  MaskKnightAttacks.hpp  MaskQueenAttacks.hpp  MaskRookAttacks.hpp  MaskWhitePawnAttacks.hpp  Misc.hpp  Move.hpp  Position.hpp  Types.hpp  Uci.hpp  Unused.hpp
engine/src/: Board.cpp  BoardHelper.cpp  DebugEngineCLI.cpp  Uci.cpp
